--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2293,7 +2293,7 @@ input, select, textarea {
 	      rgba(0, 0, 0, 0.2),
 	      rgba(0, 0, 0, 0.2)
 	    ),
-			url("../../images/Osaka_Dotonbori_Ebisu_Bridge.jpg");
+			url("../../images/osaka-banner.jpg");
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
