--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ input, select, textarea {
 		font-weight: 50;
 		font-size: 14pt;
 		line-height: 1.75em;
-		color: #888;
+		color: #000;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -162,7 +162,8 @@ input, select, textarea {
 		-webkit-transition: border-bottom-color 0.25s ease-in-out;
 		-ms-transition: border-bottom-color 0.25s ease-in-out;
 		transition: border-bottom-color 0.25s ease-in-out;
-		color: inherit;
+		/* Harry: commented to have regular link color */
+		/* color: inherit;*/
 		text-decoration: none;
 		border-bottom: dotted 1px rgba(0, 0, 0, 0.25);
 	}
