--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2279,32 +2279,23 @@ input, select, textarea {
 	border-top: solid 0.6em #282828; */
 }
 
-
-
-
-
-
-
 /* Header */
-
-	#header {
-		position: relative;
-		margin: 0;
-		background-image: linear-gradient(
-	      rgba(0, 0, 0, 0.2),
-	      rgba(0, 0, 0, 0.2)
-	    ),
-			url("../../images/osaka-banner.jpg");
-		background-size: auto, cover;
-		background-position: top left, center center;
-		background-repeat: repeat, no-repeat;
-		padding: 4em 0 14em 0;
-		text-align: left;
-		text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-		color: #fff;
-		/* color: #000; */
-	}
-
+		#header {
+			position: relative;
+			margin: 0;
+			background-image: linear-gradient(rgba(0, 0, 0, 0.4),
+					rgba(0, 0, 0, 0.0)),
+				url("../../images/sstd2025_osaka-hero.jpg");
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			padding: 10.0em 0 10.0em 0;
+			text-align: left;
+			text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+			color: #fff;
+			/* color: #000; */
+		}
+	
 		#header header h1 {
 			font-size: 2.25em;
 			line-height: 1.25em;
@@ -2312,7 +2303,7 @@ input, select, textarea {
 			font-weight: 400;
 			text-align: left;
 		}
-
+	
 		#header header p {
 			margin-top: 1.25em;
 			font-weight: 400;
@@ -2321,7 +2312,7 @@ input, select, textarea {
 			line-height: 1.5em;
 			text-align: left;
 		}
-
+	
 		#header footer {
 			padding-top: 1.5em;
 		}
