--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,7 +165,8 @@ input, select, textarea {
 		/* Harry: commented to have regular link color */
 		/* color: inherit;*/
 		text-decoration: none;
-		border-bottom: dotted 1px rgba(0, 0, 0, 0.25);
+		/* Harry: changed from dotted to solid bottom */
+		border-bottom: solid 1px rgba(0, 0, 0, 0.25);
 	}
 
 	nav a {
