--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+[id] {
+    scroll-margin-top: 4.5em; /* Adjust to match your fixed header height */
+}
         .panel-table {
             width: 100%;
             margin-top: 20px;
